Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138883

[Wayland] Missing enter event when modal windows is closed and cursor is over parent window

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.10.0 Beta4
    • 6.9.1
    • QPA: Wayland
    • None
    • Linux/Wayland
    • 93f59a641 (dev), ff1225a2f (6.10)

      1. Run attached application: wlee.tar.gz
      2. Place cursor near the edge of the large main window (we have text cursor shape).
      3. Modal window will open (we have pointer cursor shape).
      4. Make sure the cursor is inside main window and outside modal window.
      5. Press ESC to close modal window.

      Result: Missing enter event and cursor has wrong shape.

      Video: wlee.mp4

        1. wlee.mp4
          37 kB
          Błażej Szczygieł
        2. wlee.tar.gz
          0.7 kB
          Błażej Szczygieł
        For Gerrit Dashboard: QTBUG-138883
        # Subject Branch Project Status CR V

            zaps166 Błażej Szczygieł
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes