wayland: Send enter event when modal window closes

QtGui sends leave event to window under cursor when modal window opens,
so we have to send enter event when modal closes and window has cursor
and gets unblocked.

Task-number: QTBUG-138883
Change-Id: I7aeda1d534dbfeb9d480fba7413c942c0332ef5b
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 93f59a641e8992cfbdf1ec82cd91cb537dd0d63b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>